<resources>
    <string name="app_name">BlackJack</string>
    <string name="Hit">Hit</string>
    <string name="Split">Split</string>
    <string name="Double">Double</string>
    <string name="Stand">Stand</string>
    <string name="compare_user">Compare Stats</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="restart">Restart</string>
    <string name="background">Background</string>
    <string name="chipButton">Chip Button</string>
    <string name="statistics">Statistics</string>
    <string name="back">Back</string>
    <string name="overall">Overall Stats</string>
    <string name="change_user">Change User</string>
    <string name="facebook_app_id">384120415940525</string>
    <string name="facebook_application_id">384120415940525</string>
    <string name="fb_login_protocol_scheme">fb384120415940525</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_bet">Enter Bet</string>
    <string name="confirm_bet">Confirm Bet</string>
    <string name="last_bet">Last Bet</string>
    <string name="get_cash">Get Cash</string>
    <string name="toFinal"><![CDATA[>]]></string>
    <string name="get_cash_background">get_cash_background</string>
    <string name="cash_10">10$</string>
    <string name="cash_50">50$</string>
    <string name="cash_100">100$</string>
    <string name="cash_500">500$</string>
    <string name="cash_1000">1000$</string>
    <string name="cash_2000">2000$</string>
</resources>