<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="729dp"
        android:layout_height="729dp"
        android:contentDescription="@string/background"
        android:rotation="90"
        android:scaleType="centerInside"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android2:layout_constraintVertical_bias="0.504"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poker_table_background_green_color_47243_1068" />

    <TextView
        android:id="@+id/dealerCard1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealerCard2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/dealerCard3"
        app:layout_constraintStart_toEndOf="@+id/dealerCard1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealerCard3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintStart_toEndOf="@+id/dealerCard2"
        app:layout_constraintEnd_toStartOf="@+id/dealerCard4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealerCard4"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintStart_toEndOf="@+id/dealerCard3"
        app:layout_constraintEnd_toStartOf="@+id/dealerCard5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealerCard5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintStart_toEndOf="@+id/dealerCard4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard1"
        app:layout_constraintBottom_toTopOf="@+id/hand2card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/hand2card2"
        android2:layout_constraintStart_toEndOf="@+id/playerCard1"
        android2:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerCard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/hand2card3"
        android2:layout_constraintStart_toEndOf="@+id/playerCard2"
        android2:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/playerCard4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/hand2card4"
        android2:layout_constraintStart_toEndOf="@+id/playerCard3"
        android2:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerCard5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/hand2card5"
        android2:layout_constraintStart_toEndOf="@+id/playerCard4"
        android2:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerCard6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/hand2card5"
        android2:layout_constraintEnd_toEndOf="parent"
        android2:layout_constraintHorizontal_bias="0.0"
        android2:layout_constraintStart_toEndOf="@+id/playerCard5"
        android2:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Hit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPass"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPass"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Stand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDouble"
        app:layout_constraintStart_toEndOf="@+id/buttonHit" />

    <Button
        android:id="@+id/buttonDouble"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSplit"
        app:layout_constraintStart_toEndOf="@+id/buttonPass" />

    <Button
        android:id="@+id/buttonSplit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Split"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDouble" />

    <TextView
        android:id="@+id/hand2card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toStartOf="parent"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard1" />

    <TextView
        android:id="@+id/hand2card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toEndOf="@+id/hand2card1"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard2" />

    <TextView
        android:id="@+id/hand2card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toEndOf="@+id/hand2card2"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard3" />

    <TextView
        android:id="@+id/hand2card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toEndOf="@+id/hand2card3"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard4" />

    <TextView
        android:id="@+id/hand2card5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toEndOf="@+id/hand2card4"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard5" />

    <TextView
        android:id="@+id/hand2card6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="200dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android2:layout_constraintBottom_toTopOf="@+id/buttonHit"
        android2:layout_constraintStart_toEndOf="@+id/hand2card5"
        android2:layout_constraintTop_toBottomOf="@+id/dealerCard5" />


</androidx.constraintlayout.widget.ConstraintLayout>